@@ -1,3 +1,6 @@
+[B]Version 0.7.8[/B]
+- removed rebase function
+
 [B]Version 0.7.7[/B]
 - version bump
 
